new endpoint template stage
